--- a/chapter6-postprocess.tex
+++ b/chapter6-postprocess.tex
@@ -5,8 +5,9 @@
 % \section{baseline rerankers}
 % \section{A survey of re-rankers} ( adding some overall experiments to compare methods)
 
-\section{FAR/PFAR}
+\section{Fair-Aware Re-ranking/Personalized Fair-Aware Re-ranking (FAR/PFAR)}
     \input chapter6-farpfar.tex
+    
 
 \section{Opportunistic Multi-aspect Fairness through Personalized Re-ranking (OFAIR)}
     % \input chapter6-ofair.tex
