--- a/main.tex
+++ b/main.tex
@@ -122,10 +122,10 @@
 \begin{document}
 
 \input macros.tex
-\input chapter1-intro.tex
-\input chapter3-fairness.tex
-\input chapter4-methodology.tex
-\input chapter5-inprocess.tex
+% \input chapter1-intro.tex
+% \input chapter3-fairness.tex
+% \input chapter4-methodology.tex
+% \input chapter5-inprocess.tex
 \input chapter6-postprocess.tex
 \input chapter7-librec.tex
 % \input chapter8-conclusion.tex
