--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,7 @@
 \usepackage{booktabs} 
 \usepackage{bbm}
 \usepackage{tabularx}
+\usepackage{romannum}
 
 %% Math Macros
 \newcommand{\reals}{\ensuremath{\mathbb{R}}}
